--- a/lab2/css/master.css
+++ b/lab2/css/master.css
@@ -3,6 +3,6 @@
   display: flex;
   margin: 0 auto;
   flex-direction: column;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Roboto Slab', serif;
+
 }
