--- a/lab2/css/search.css
+++ b/lab2/css/search.css
@@ -3,13 +3,13 @@
   border-radius: 2px;
   display: flex;
   flex-direction: column;
-  align-items:center;
+  align-items: center;
 }
 
-.search-component > div {
-  width: 90%;
+.search-component .search-actions {
+  display: flex;
+  flex-direction: row;
 }
-
 .search-component .search-header {
   font-size: 20px;
   font-weight: bold;
