--- a/lab2/css/avatar.css
+++ b/lab2/css/avatar.css
@@ -1,3 +1,7 @@
+.avatar {
+    min-width: 100%;
+}
+
 .avatar:hover {
     cursor: pointer;
     background-color: lightgrey;
@@ -10,11 +14,17 @@
     display: flex;
     align-self: center;
     margin: 10px;
+    background-image: url("../../assets/img/default.png");
 }
 
 .avatar .avatar-img {
     border-radius: 5px;
 }
+
+.avatar .avatar-img img {
+    border-radius: 5px;
+}
+
 .avatar .avatar-name {
     font-weight: bold;
 }
@@ -24,5 +34,13 @@
 }
 
 .avatar .btn-delete {
+    margin-left: auto;
+    margin-right: 5%;
+    display: flex;
+}
+
+.avatar .btn-delete button {
     align-self: center;
+    color: white;
+    background-color: red;
 }
