--- a/lab2/css/search.css
+++ b/lab2/css/search.css
@@ -1,24 +1,32 @@
 .search-component {
-  border: 1px lightgrey solid;
-  border-radius: 2px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    border: 1px lightgrey solid;
+    border-radius: 2px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .search-component .search-actions {
-  display: flex;
-  flex-direction: row;
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
 }
 .search-component .search-header {
-  font-size: 20px;
-  font-weight: bold;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .search-component .search-input {
-  margin-bottom: 20px;
+    width: 75%;
+    margin-bottom: 20px;
 }
 
 .search-component .search-input input {
-  width: 100%;
+    width: 100%;
+}
+
+.search-component .add-person-btn button {
+    width: 110%;
+    margin-left: 20px;
 }
