--- a/views/layouts/main-layout.hbs
+++ b/views/layouts/main-layout.hbs
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
 
-    <title>Template List</title>
+    <title>{{title}}</title>
     <meta name="description" content="Template List" />
     <meta name="author" content="MichaelYu" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet" />
@@ -14,13 +14,22 @@
     <link rel=" stylesheet" type="text/css" href="../../css/list.css" />
     <link rel="stylesheet" type="text/css" href="../../css/search.css" />
     <link rel="stylesheet" type="text/css" href="../../css/form.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/login.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/header.css" />
 
     <script src="../js/list.js" defer></script>
+    <script src="../js/routes.js" defer></script>
 
 </head>
+<header>
+    {{{header}}}
+</header>
 
 <body>
     {{{body}}}
 </body>
+<footer>
+    {{{footer}}}
+</footer>
 
 </html>
